<resources>
    <string name="app_name">Casa Nostra</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="mu_ko">Muško</string>
    <string name="ensko">Žensko</string>
    <string name="spol">Spol:</string>
    <string name="godina_ro_enja">Godina rođenja:   </string>
    <string name="reci_nam_ne_to_o_sebi">Reci nam nešto o sebi...</string>
    <string name="fakultet">Fakultet:</string>
    <string name="ja_sam_pu_a">Ja sam pušač</string>
    <string name="da">Da</string>
    <string name="ne">Ne</string>
    <string name="imam_ljubimca">Imam ljubimca</string>
    <string name="volim_miran_ivot">Volim miran život</string>
    <string name="volim_partijati">Volim partijati</string>
    <string name="pas">Pas</string>
    <string name="zec">Zec</string>
    <string name="ma_ka">Mačka</string>
    <string name="papiga">Papiga</string>
    <string name="hr_ak">Hrčak</string>
    <string name="drugo">Drugo</string>
    <string name="zapad">Zapad</string>
    <string name="istok">Istok</string>
    <string name="centar">Centar</string>
    <string name="prigrad">Prigrad</string>
    <string name="ne_elim_da_je_cimer_pu_a">Ne želim da je cimer pušač.</string>
    <string name="svejedno_mi_je">Svejedno mi je</string>
    <string name="ne_elim_da_cimer_ima_ku_nog_ljubimca">Ne želim da cimer ima kućnog ljubimca.</string>
    <string name="to_to_no_tra_i">Što točno tražiš?</string>
    <string name="tra_im_i_cimera_i_stan">Tražim i cimera i stan</string>
    <string name="imam_stan_tra_im_cimera">Imam stan, tražim cimera</string>
    <string name="korisni_ko_ime">Korisničko ime</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="prijava">Prijava</string>
    <string name="registracija">Registracija</string>
    <string name="cijena_stana">Cijena stana po osobi do:</string>
    <string name="lokacija">Lokacija:</string>
    <string name="nudim">Nudim:</string>
    <string name="spol_cimera">Spol cimera:</string>
    <string name="godi_te_cimera_izme_u">Godište cimera između:</string>
    <string name="i">i</string>
    <string name="svejedno">Svejedno</string>

    <string name="zasebnu_sobu">Zasebnu sobu.</string>
    <string name="sobu_koju_emo_dijeliti">Sobu koju ćemo dijeliti.</string>
    <string name="e_mail">E-mail</string>
    <string name="korisnicko_ime">Korisnicko ime</string>
    <string name="zaporka">Zaporka</string>
    <string name="ponovi_unos_zaporke">Ponovi unos zaporke</string>
    <string name="tvoje_ime">Tvoje ime</string>
    <string name="dodajte_slike_profla">Dodajte slike profla:</string>
    <string name="registriraj_se">Registriraj se</string>
    <string name="dalje">dalje</string>
    <string name="homepage_in_progress">Homepage in progress</string>
    <string name="email">Email</string>





    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Potvrdite zaporku</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Unesite vaše ime</string>
    <string name="error_message_email">Unesite ispravnu e-mail adresu</string>
    <string name="error_message_age">Unesite godine</string>
    <string name="error_message_password">Unesite zaporku</string>
    <string name="success_message">Uspješna registracija!</string>
    <string name="text_not_member">Nemate račun? <u>Napravite ga!</u></string>
    <string name="text_already_member">Već ste član? Ulogirajte se!</string>
    <string name="error_email_exists">E-mail već postoji</string>
    <string name="error_password_match">Zaporke se ne podudaraju</string>
    <string name="error_valid_email_password">Krivi e-mail ili zaporka</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="ime">Ime</string>
    <string name="email_adresa">Email adresa</string>
    <string name="ponovni_unos_zaporke">Ponovni unos zaporke</string>
    <string name="register">Register</string>
    <string name="cijena_stana_do">Cijena stana do:</string>
    <string name="izbrisi_racun"><u>Izbriši račun</u></string>
    <string name="prijavise">Već imate račun? <u>Prijavite se!</u></string>
    <string name="admin"><u>Prijavite se</u> kao administrator</string>



</resources>