<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"

            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="54dp"
                    android:layout_height="38dp"
                    app:srcCompat="@drawable/ic_android_black_24dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/reci_nam_ne_to_o_sebi"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/godina_ro_enja"
                    android:textSize="18sp" />

                <EditText

                    android:id="@+id/yearOfBirth"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"

                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/spol"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/roommateApartment"
                        android:layout_width="108dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/mu_ko"
                        android:textColor="@color/primary_text" />

                    <RadioButton
                        android:id="@+id/roommate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/ensko" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="133dp"
                    android:layout_height="34dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/ja_sam_pu_a"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/smoker"
                        android:layout_width="83dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/da" />

                    <RadioButton
                        android:id="@+id/nonSmoker"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/ne" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/fakultet"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/faculty"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/noParty"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/volim_miran_ivot" />

                <RadioButton
                    android:id="@+id/party"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/volim_partijati" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/imam_ljubimca"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton

                        android:id="@+id/petYes"
                        android:layout_width="80dp"

                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:layout_marginLeft="4dp"
                        android:onClick="chooseAnimal"
                        android:text="@string/da" />

                    <RadioButton

                        android:id="@+id/petNo"
                        android:layout_width="80dp"

                        android:layout_height="wrap_content"
                        android:onClick="noAnimal"
                        android:text="@string/ne" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cat"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ma_ka"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/hamster"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hr_ak"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/parrot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/papiga"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/dog"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/pas"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/rabbit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/zec"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drugo"
                    android:visibility="visible" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonAboutYou"
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:onClick="findApartmentRoommate"
                android:text="@string/dalje" />


                android:layout_marginStart="112dp"
                android:layout_marginTop="684dp"
                android:text="@string/dalje" />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

