<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apartmentAndRoommateButton"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginTop="840dp"
            android:text="@string/dalje"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="73dp"
            android:layout_height="49dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_android_black_24dp" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="Cijena stana do:"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="156dp"
            android:text="@string/lokacija"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:text="@string/spol_cimera"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="476dp"
            android:text="@string/godi_te_cimera_izme_u"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="532dp"
            android:text="@string/i"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/to2"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="156dp"
            android:layout_marginTop="84dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="135dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="328dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mu_ko" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:text="@string/ensko" />

            <RadioButton
                android:id="@+id/femaleMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/svejedno" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/west"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="156dp"
            android:text="@string/zapad"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/east"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="188dp"
            android:text="@string/istok"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/center"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="220dp"
            android:text="@string/centar"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/suburbs"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="256dp"
            android:text="@string/prigrad"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/other"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="288dp"
            android:text="@string/svejedno"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/year2"
            android:layout_width="75dp"
            android:layout_height="47dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="532dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/year1"
            android:layout_width="79dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="524dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="612dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/smoke"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ne_elim_da_je_cimer_pu_a"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/noSmoke"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/svejedno_mi_je"
                android:textSize="18sp" />


        </RadioGroup>

        <RadioGroup
            android:id="@+id/tt2"
            android:layout_width="0dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="716dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/pet"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:text="@string/ne_elim_da_cimer_ima_ku_nog_ljubimca"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/noPet"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/svejedno_mi_je"
                android:textSize="18sp" />


        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>